# libtool-template-instantiation

./: .gitignore  Makefile.am  Makefile.in  configure  configure.ac  prog.cpp  test.cpp  test.h
